[gd_scene load_steps=9 format=3 uid="uid://cgogh6ayhlim7"]

[ext_resource type="Script" uid="uid://cyd1rw5uji4q4" path="res://actors/asteroids/asteroid.gd" id="1_adigb"]
[ext_resource type="ArrayMesh" uid="uid://b1vi133l2ps3t" path="res://Assets/Icosphere_Icosphere_001.res" id="1_xfbri"]
[ext_resource type="Material" uid="uid://ypg1md42sf1m" path="res://shaders/materials/yellow_outline.tres" id="2_rsexs"]
[ext_resource type="Script" uid="uid://bi2ox86m0yg1y" path="res://scripts/components/hookable_component.gd" id="3_mmsgs"]
[ext_resource type="Script" uid="uid://dtpuy1iftshns" path="res://scripts/meterial_overlayer.gd" id="4_rsexs"]
[ext_resource type="Script" uid="uid://b6pqa311a7k0c" path="res://scripts/components/mouse_over_component.gd" id="6_0d66c"]

[sub_resource type="SphereShape3D" id="SphereShape3D_xfbri"]

[sub_resource type="SphereShape3D" id="SphereShape3D_adigb"]
radius = 0.1

[node name="Asteroid" type="RigidBody3D"]
collision_layer = 3
collision_mask = 21
axis_lock_linear_y = true
mass = 100.0
script = ExtResource("1_adigb")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(0.31, 0, 0, 0, 0.31, 0, 0, 0, 0.31, -0.018561, -0.00961608, 0)
mesh = ExtResource("1_xfbri")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_xfbri")

[node name="CollectionShape" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollectionShape"]
shape = SubResource("SphereShape3D_adigb")

[node name="HookableComponent" type="Node" parent="."]
script = ExtResource("3_mmsgs")
metadata/_custom_type_script = "uid://bi2ox86m0yg1y"

[node name="UnhookSelection" type="Node" parent="." node_paths=PackedStringArray("meshes")]
script = ExtResource("4_rsexs")
meshes = [NodePath("../MeshInstance3D")]
material_overlay = ExtResource("2_rsexs")
metadata/_custom_type_script = "uid://dtpuy1iftshns"

[node name="MouseOverComponent" type="Node" parent="."]
script = ExtResource("6_0d66c")
metadata/_custom_type_script = "uid://b6pqa311a7k0c"
